# nightman

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
evals/: agentic.py  run.py
evals/fixtures/: boundary_index.py  comparison_flip.py  empty_input.py  integer_truncation.py  off_by_one.py  off_by_one_range.py  recursion_runaway.py  type_coercion.py  unicode_edge.py  unsafe_eval.py
src/nightman/: __init__.py  annotate.py  baseline.py  cli.py  config.py  diff.py  discover.py  emit.py  explain.py  hunt.py  infer.py  models.py  mutate.py  persona.py  properties.py  sandbox.py  sarif.py  score.py  server.py  severity.py  sweep.py  target.py
tests/: test_backend.py  test_ci.py  test_cli.py  test_diff.py  test_dogfood.py  test_engine.py  test_precision.py  test_properties.py  test_robustness.py  test_score.py  test_sweep.py
