[project]
name = "nightman"
version = "0.2.0"
description = "The Nightman comes for your untested code — finds a real crash and hands you the minimal pytest regression test that proves it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hatim" }]
keywords = ["testing", "property-based-testing", "fuzzing", "hypothesis", "pytest", "mcp", "bug-finder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "hypothesis>=6.130",
    "mcp>=1.2",
]

[project.optional-dependencies]
crosshair = [
    "hypothesis-crosshair>=0.0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[project.scripts]
nightman = "nightman.cli:main"

[project.urls]
Homepage = "https://github.com/Falcon305/nightman"
Repository = "https://github.com/Falcon305/nightman"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nightman"]

[tool.ruff]
line-length = 115
target-version = "py311"
src = ["src"]
extend-exclude = ["evals/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "SIM105", "SIM115", "RUF001"]

[tool.mypy]
python_version = "3.11"
packages = ["nightman"]
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["hypothesis.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["nightman"]
branch = false

[tool.coverage.report]
show_missing = false
fail_under = 60
